--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "lint": "eslint --fix --ext .js,.ts,.json .",
     "start": "nodemon ./dist/server.js",
-    "prod": "npm run build && npm run start"
+    "lint": "eslint --fix --ext .js,.ts,.json ."
   },
   "repository": "https://github.com/RodrigoLS/teste-backend-LinkApi.git",
   "author": "RodrigoLS <rolima13@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
     "dotenv": "^8.2.0",
@@ -32,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^7.11.0",
+    "nodemon": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.64",
     "typescript": "^4.0.3"
   }
